Updates before updating the static dataset
